Added Shopping Cart events and entity structure together with Product Items logic. Renamed applications and set .gitattributes and .editorconfig

--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -20,3 +20,13 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+  jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+  jvmArgs += "--enable-preview"
+}
