--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -14,7 +14,10 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
+  implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+
+  implementation 'com.eventstore:db-client-java:2.0.0'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
