--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -13,11 +13,20 @@ repositories {
 }
 
 dependencies {
+  // Spring Boot Web
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  // Swagger
   implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
-
-  implementation 'com.eventstore:db-client-java:2.0.0'
+  // Serialisation
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+
+  // EventStoreDB client
+  implementation 'com.eventstore:db-client-java:2.0.0'
+
+
+  // Postgres and JPA for read models
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
+  implementation 'org.postgresql:postgresql:42.3.3'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
