--- a/samples/event-sourcing-esdb-simple/src/main/resources/application.properties
+++ b/samples/event-sourcing-esdb-simple/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform= postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Password12!
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
