Added strong typing to state rehydration and in consequence EntityStore Added SDB connection string to application.properties

--- a/samples/event-sourcing-esdb-simple/src/main/resources/application.properties
+++ b/samples/event-sourcing-esdb-simple/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+esdb.connectionstring=esdb://localhost:2113?tls=false
