--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
   // Spring Boot Web
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  // Retry policy
+  implementation 'org.springframework.retry:spring-retry:1.3.2'
   // Swagger
   implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
   // Serialisation
@@ -31,11 +33,17 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
   implementation 'org.postgresql:postgresql:42.3.3'
 
+  // Test frameworks
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+  testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
 }
 
 configurations {
   all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+  all*.exclude group: 'spring-boot-starter-test', module: 'junit'
 }
 
 tasks.named('test') {
