Fixed failing tests Added long-polling to GetShoppingCartById

--- a/.github/workflows/samples_event-sourcing-esdb-simple.yml
+++ b/.github/workflows/samples_event-sourcing-esdb-simple.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
+        if: always()
         with:
           name: Test report
           path: ./samples/event-sourcing-esdb-simple/build/test-results/test
