--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -42,6 +42,7 @@ dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
   testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
+  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
 }
 
 configurations {
@@ -61,4 +62,9 @@ tasks.withType(Test) {
 }
 tasks.withType(JavaExec) {
   jvmArgs += "--enable-preview"
+}
+
+test {
+  testLogging.showStandardStreams = true
+  testLogging.exceptionFormat = 'full'
 }
