--- a/.github/workflows/samples_event-sourcing-esdb-aggregates.yml
+++ b/.github/workflows/samples_event-sourcing-esdb-aggregates.yml
@@ -1,4 +1,4 @@
-name: Samples - Event Sourcing with Spring Boot and EventStoreDB
+name: Samples - Event Sourcing with Spring Boot and EventStoreDB using Aggregate pattern
 
 on:
   # run it on push to the default repository branch
