--- a/samples/event-sourcing-esdb-aggregates/build.gradle
+++ b/samples/event-sourcing-esdb-aggregates/build.gradle
@@ -14,27 +14,27 @@ repositories {
 
 dependencies {
   // Spring Boot Web
-  implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.4'
+  implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
   // Validation
-  implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.4'
+  implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.7'
   // Retry policy
-  implementation 'org.springframework.retry:spring-retry:1.3.2'
+  implementation 'org.springframework.retry:spring-retry:1.3.3'
   // Swagger
-  implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+  implementation 'org.springdoc:springdoc-openapi-ui:1.6.7'
   // Serialisation
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
 
   // Log4J logging
-  implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.4'
+  implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.6.7'
 
   // EventStoreDB client
-  implementation 'com.eventstore:db-client-java:2.0.0'
+  implementation 'com.eventstore:db-client-java:3.0.0'
 
 
   // Postgres and JPA for read models
-  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
-  implementation 'org.postgresql:postgresql:42.3.3'
-  implementation 'junit:junit:4.13.1'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.7'
+  implementation 'org.postgresql:postgresql:42.3.4'
+  implementation 'junit:junit:4.13.2'
 
   // Test frameworks
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -42,7 +42,7 @@ dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
   testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
-  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
 }
 
 configurations {
