Added sample showing how to apply stream transformations for events versioning with ESDB

--- a/.github/workflows/samples_events-versioning.yml
+++ b/.github/workflows/samples_events-versioning.yml
@@ -1,4 +1,4 @@
-name: Samples - EventStoreDB Stream Metadata
+name: Samples - EventStoreDB Events Versioning
 
 on:
   # run it on push to the default repository branch
