--- a/.github/workflows/samples_event-stream-metadata.yml
+++ b/.github/workflows/samples_event-stream-metadata.yml
@@ -4,8 +4,12 @@ on:
   # run it on push to the default repository branch
   push:
     branches: [main]
+    paths:
+      - "samples/stream-metadata/**"
   # run it during pull request
   pull_request:
+    paths:
+      - "samples/stream-metadata/**"
 
 defaults:
   run:
