--- a/samples/uniqueness/build.gradle
+++ b/samples/uniqueness/build.gradle
@@ -23,6 +23,10 @@ dependencies {
   implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
   implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
 
+  // Postgres and JPA for read models
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.0'
+  implementation 'org.postgresql:postgresql:42.3.6'
+
   // Test frameworks
   implementation 'junit:junit:4.13.2'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
