--- a/samples/uniqueness/build.gradle
+++ b/samples/uniqueness/build.gradle
@@ -35,6 +35,12 @@ dependencies {
   testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 }
 
+configurations {
+  all {
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+  }
+}
+
 tasks.named('test') {
   useJUnitPlatform()
 }
