Added CI configuration for workshops

--- a/workshops/introduction-to-event-sourcing/build.gradle
+++ b/workshops/introduction-to-event-sourcing/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 }
 
 tasks.named('test') {
-  useJUnitPlatform()
+  useJUnitPlatform {
+    excludeTags 'Exercise'
+  }
 }
 
 tasks.withType(JavaCompile) {
