--- a/workshops/introduction-to-event-sourcing/build.gradle
+++ b/workshops/introduction-to-event-sourcing/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   // Serialisation
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+  implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.13.3'
 
   // EventStoreDB client
   implementation 'com.eventstore:db-client-java:3.0.0'
