Small updates to READMEs

--- a/.github/workflows/samples_uniqueness.yml
+++ b/.github/workflows/samples_uniqueness.yml
@@ -1,4 +1,4 @@
-name: Samples - EventStoreDB Events Versioning
+name: Samples - Uniqueness in Event Sourcing
 
 on:
   # run it on push to the default repository branch
