Fix the exercises build.gradle

--- a/workshops/introduction-to-event-sourcing/exercises/build.gradle
+++ b/workshops/introduction-to-event-sourcing/exercises/build.gradle
@@ -47,6 +47,7 @@ tasks.withType(JavaExec) {
 }
 
 test {
+  useJUnitPlatform()
   testLogging.showStandardStreams = true
   testLogging.exceptionFormat = 'full'
 }
