--- a/samples/distributed-processes/build.gradle
+++ b/samples/distributed-processes/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id 'java'
+  id("com.diffplug.spotless") version "6.22.0"
 }
 
 group = 'io.event-driven'
@@ -39,6 +40,12 @@ dependencies {
 configurations {
   all {
     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+  }
+}
+
+spotless {
+  java {
+    googleJavaFormat()
   }
 }
 
