--- a/.github/workflows/samples_event-sourcing-esdb-simple.yml
+++ b/.github/workflows/samples_event-sourcing-esdb-simple.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       # define the test matrix
       matrix:
-        java-version: [17, 18]
+        java-version: [21]
 
     steps:
       - name: Check Out Repo
