--- a/.github/workflows/samples_event-sourcing-esdb-aggregates.yml
+++ b/.github/workflows/samples_event-sourcing-esdb-aggregates.yml
@@ -23,11 +23,11 @@ jobs:
     strategy:
       # define the test matrix
       matrix:
-        java-version: [17, 18]
+        java-version: [21]
 
     steps:
       - name: Check Out Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Start containers
         run: docker-compose up -d
@@ -38,19 +38,19 @@ jobs:
           java-version: ${{ matrix.java-version }}
           distribution: "adopt"
           cache: gradle
+          
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-          gradle-version: wrapper
-          build-root-directory: samples/event-sourcing-esdb-simple
+      - name: Build with Gradle
+        run: ./gradlew build
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
         if: always()
         with:
           name: Test report
-          path: ./samples/event-sourcing-esdb-simple/build/test-results/test
+          path: ./samples/event-sourcing-esdb-aggregates/build/test-results/test
 
       - name: Stop containers
         if: always()
