--- a/samples/distributed-processes/build.gradle
+++ b/samples/distributed-processes/build.gradle
@@ -2,6 +2,12 @@ plugins {
   id 'java'
 }
 
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
+
 group = 'io.event-driven'
 version = '0.0.1-SNAPSHOT'
 
@@ -44,16 +50,6 @@ configurations {
 
 tasks.named('test') {
   useJUnitPlatform()
-}
-
-tasks.withType(JavaCompile) {
-  options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-  jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-  jvmArgs += "--enable-preview"
 }
 
 test {
