--- a/samples/distributed-processes/docker-compose.yml
+++ b/samples/distributed-processes/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   #  EventStoreDB - Event Store
   #######################################################
   eventstore.db:
-    image: eventstore/eventstore:23.10.0-buster-slim
+    image: eventstore/eventstore:23.10.1-bookworm-slim
     # use this image if you're running ARM-based proc like Apple M1
     # image: eventstore/eventstore:23.10.0-alpha-arm64v8
     environment:
