--- a/samples/event-sourcing-esdb-simple/build.gradle
+++ b/samples/event-sourcing-esdb-simple/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-  id 'org.springframework.boot' version '3.0.1'
-  id 'io.spring.dependency-management' version '1.1.0'
+  id 'org.springframework.boot' version '3.2.5'
+  id 'io.spring.dependency-management' version '1.1.4'
   id 'java'
 }
 
@@ -19,35 +19,36 @@ repositories {
 
 dependencies {
   // Spring Boot Web
-  implementation 'org.springframework.boot:spring-boot-starter-web:3.0.1'
+  implementation 'org.springframework.boot:spring-boot-starter-web:3.2.5'
   // Validation
-  implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.1'
+  implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
   // Retry policy
-  implementation 'org.springframework.retry:spring-retry:2.0.0'
+  implementation 'org.springframework.retry:spring-retry:2.0.5'
   // Swagger
-  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
   // Serialisation
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
 
   // Log4J logging
-  implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.0.1'
+  implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.2.5'
 
   // EventStoreDB client
-  implementation 'com.eventstore:db-client-java:4.0.0'
+  implementation 'com.eventstore:db-client-java:5.3.2'
 
 
   // Postgres and JPA for read models
-  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.1'
-  implementation 'org.postgresql:postgresql:42.5.1'
-  implementation 'junit:junit:4.13.2'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
+  implementation 'org.postgresql:postgresql:42.7.3'
 
   // Test frameworks
-  testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.1'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.5'
 
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
-  testImplementation 'org.junit.platform:junit-platform-launcher:1.9.1'
-  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+  testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
+  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+  testImplementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
 }
 
 configurations {
