Enabled multi-project build for exercises

--- a/workshops/introduction-to-event-sourcing/solved/build.gradle
+++ b/workshops/introduction-to-event-sourcing/solved/build.gradle
@@ -10,6 +10,13 @@ java {
   }
 }
 
+bootJar {
+  enabled = false
+}
+
+jar {
+  enabled = true
+}
 
 group = 'io.event-driven'
 version = '0.0.1-SNAPSHOT'
