--- a/workshops/introduction-to-event-sourcing/exercises/build.gradle
+++ b/workshops/introduction-to-event-sourcing/exercises/build.gradle
@@ -10,6 +10,14 @@ java {
   }
 }
 
+bootJar {
+  enabled = false
+}
+
+jar {
+  enabled = true
+}
+
 group = 'io.event-driven'
 version = '0.0.1-SNAPSHOT'
 
