--- a/.github/workflows/workshops_build-your-own-event-store-solved.yml
+++ b/.github/workflows/workshops_build-your-own-event-store-solved.yml
@@ -23,30 +23,30 @@ jobs:
     strategy:
       # define the test matrix
       matrix:
-        java-version: [17, 18]
+        java-version: [22]
 
     steps:
       - name: Check Out Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Start containers
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
           distribution: "adopt"
           cache: gradle
+          
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-          gradle-version: wrapper
-          build-root-directory: workshops/build-your-own-event-store/solved
+      - name: Build with Gradle
+        run: ./gradlew build
 
       - name: Archive test report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: Test report
@@ -54,4 +54,4 @@ jobs:
 
       - name: Stop containers
         if: always()
-        run: docker-compose down
+        run: docker compose down
