Replaced Database with Database Collection to make it easier to use

--- a/workshops/event-driven-architecture/exercises/build.gradle
+++ b/workshops/event-driven-architecture/exercises/build.gradle
@@ -12,6 +12,12 @@ jar {
   enabled = true
 }
 
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
+
 group = 'io.event-driven'
 version = '0.0.1-SNAPSHOT'
 
